styles.css
*{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}
.menu{
    display: flex;
    flex-direction: column;
    justify-content: center;
    /* align-items: center; */
    gap: 0.5rem;
    background-color: burlywood;
    width: 500px;
    padding: 1rem;
    margin: 2rem auto;
    border-radius: 0.5rem;
}
.menu h1{
    text-align: center;
}


button{
    height: 2rem;
    background-color: lightblue;
    border: none;
    outline: none;
    border-radius: 0.5rem;
    font-weight: 600;
}
button:hover{
    background-color: #3fe5b3;
}

.food-container{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    gap: 1rem;
    background-color: #ada2a2;
    width: 500px;
    padding: 1rem 0.5rem;
    margin: auto;
    border-radius: 1rem;
}

img{
    height: 200px;
    width: 200px;
}
textarea{
    width: 100%;
    height: 80px;
    border-radius: 0.5rem;
    padding: 1rem;
}

.item-div{
    width: 470px;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    gap: 1rem;
    /* border: 1px solid red; */
}

.detail-div{
    width: 250px;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    /* border: 1px solid green; */
}

.order-id{
    font-size: 1.5rem;
    color: orangered;
}

@media screen and (max-width:505px) {
    .item-div{
        flex-direction: column;
    }

    .menu, .food-container{
        width: 95vw;
    }
}

